# project-management-backend

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: ai.ts  projects.ts  tasks.ts
frontend/src/components/: AiNewProjectModal.tsx  Badge.tsx  Button.tsx  ConfirmDialog.tsx  DependenciesPanel.tsx  EmptyState.tsx  ErrorState.tsx  Field.tsx  KanbanBoard.tsx  Layout.tsx  Modal.tsx  OrderedTaskList.tsx  PageHeader.tsx  ProjectForm.tsx  ProjectOverview.tsx  SegmentedControl.tsx  Spinner.tsx  SubtasksPanel.tsx  TaskCard.tsx  TaskForm.tsx
frontend/src/hooks/: useAi.ts  useProjects.ts  useTasks.ts
frontend/src/lib/: api.ts  format.ts  queryClient.ts
frontend/src/pages/: ProjectDetailPage.tsx  ProjectsPage.tsx  TasksPage.tsx
frontend/src/types/: api.ts
release_tracker/: .env.example  compose.yaml  config.py  pyproject.toml  ruff.toml
release_tracker/alembic/: env.py
release_tracker/alembic/versions/: 4e3d2d25e7fc_initial.py  8f309573c983_add_tasks_table.py  b056d58e84f0_add_task_dependencies.py  b5c83b7a93fd_initial.py  bfff61fcc635_describe_change.py  c2a1c07a09e2_initial.py  c7a1e2f903b4_add_parent_task_id.py
release_tracker/src/: __init__.py  ai.py  config.py  crud.py  database.py  dependency.py  main.py  models.py  test_main.py  undo.py
release_tracker/src/release_tracker/: main.py
release_tracker/src/routers/: projects.py  task.py
release_tracker/src/script/: seed.py
