[project]
name = "release-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ganes769", email = "ganeshsnawali@gmail.com" }
]
requires-python = "==3.14.*"
dependencies = [
    "fastapi[standard]>=0.115.0",
]

[project.scripts]
release-tracker = "release_tracker:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
