[project]
name = "release-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ganes769", email = "ganeshsnawali@gmail.com" }
]
requires-python = "==3.14.*"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.115.0",
    "google-genai>=1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
